# JDbrowser

./: .gitignore  Cargo.toml  readme.md
src/: app.rs  main.rs  ui.rs
src/ui/: colors.rs  file_menu.rs  help_view.rs  string_list.rs  table_view.rs  talbe_view.rs
